--- a/src/stylecheet.css
+++ b/src/stylecheet.css
@@ -68,3 +68,12 @@ body {
     color: white;
     margin: 0 10px 0 10px;
 }
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.fade-in:hover {
+    opacity: 1;
+}
