--- a/src/stylecheet.css
+++ b/src/stylecheet.css
@@ -69,11 +69,31 @@ body {
     margin: 0 10px 0 10px;
 }
 
+
 .fade-in {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    animation: fadeIn 1s;
 }
 
-.fade-in:hover {
+
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+.elementToFadeInAndOut {
     opacity: 1;
+    animation: fade 5s;
+}
+
+
+@keyframes fade {
+    0%,100% { opacity: 0 }
+    50% { opacity: 1 }
 }
