--- a/src/stylecheet.css
+++ b/src/stylecheet.css
@@ -15,12 +15,12 @@ body {
 
 .headlineText {
     text-align: center;
-
 }
 
 .destBox {
     padding-top: 100px;
     justify-content: center;
+    position: absolute;
 }
 
 #map {
@@ -33,21 +33,14 @@ body {
 }
 
 .center {
-    position: center;
-    align-content: center;
-    justify-content: center;
-    max-width: 370px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.picturecard {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 550px;
  /* Adjust as needed */
 }
 
-.picturecard > * {
+.center > * {
     margin: auto;
 }
 .rakkerpic {
@@ -58,7 +51,6 @@ body {
 
 .rakkersection {
     display: inline-block;
-
     justify-content: center;
     align-content: center;
 }
