--- a/src/stylecheet.css
+++ b/src/stylecheet.css
@@ -10,22 +10,33 @@ html {
 
 body {
     background-color: #282D35;
+    font-family: Inter, sans-serif;
     margin: 0;
 }
 
 .headlineText {
     text-align: center;
+}
+
+.robAndJonPic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 370px;
+    max-height: 500px;
+}
+
+.headlineContainer {
     margin-bottom: 50px;
 }
 
 .destBox {
-    padding-top: 100px;
+    padding-top: 50px;
     justify-content: center;
-    position: absolute;
+    position: relative;
 }
 
 #map {
-    margin-left: 5px;
     width: 375px;
     height: 375px;
     margin-bottom: 50px;
@@ -37,12 +48,21 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 550px;
  /* Adjust as needed */
 }
 
 .center > * {
     margin: auto;
+}
+
+.centerText {
+    text-align: center;
+}
+
+.rakkerContainer {
+    height: 600px;
+    margin-top: 20px;
+    margin-bottom: 80px;
 }
 
 .rakkerpic {
@@ -100,7 +120,7 @@ body {
 
 @keyframes moveTopAndRotate {
     from {bottom: 2000px; transform: rotate(0deg);}
-    to {bottom: 100px; transform: rotate(359deg);}
+    to {bottom: -550px; transform: rotate(359deg);}
 }
 
 @keyframes rotate {
@@ -108,6 +128,52 @@ body {
     to {transform: rotate(359deg);}
 }
 
+@keyframes fadeInFromLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* Apply the animation to an element */
+#fadeInFromLeft {
+    animation: fadeInFromLeft 1s ease-out;
+}
+
+@keyframes fadeInFromRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+#fadeInFromRight {
+    animation: fadeInFromRight 1s ease-out;
+}
+
+@keyframes fadeInFromTop {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Apply the animation to an element */
+#fadeInFromTop {
+    animation: fadeInFromTop 2s ease-out;
+}
 #onClickImage {
     max-width: 390px;
 }
@@ -126,6 +192,19 @@ body {
     margin: 0px 0px 400px 200px;
     max-width: 200px;
     position: absolute;
-    animation: rotate infinite 0.5s;
+    animation: rotate infinite 0.03s;
+}
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #21222A;
+    color: gray;
+    text-align: center;
+}
+
+.copyrightText {
+    font-size: 10px;
 }
